--- a/src/components/PokemonCard/style.css
+++ b/src/components/PokemonCard/style.css
@@ -21,6 +21,10 @@
   height: 100%
 }
 
+.card:hover {
+  border: solid black 2px;
+}
+
 .card>.content {
   padding-left: 1rem;
   padding-right: 1rem;
