--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -2,7 +2,7 @@
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  text-decoration: underline;
-  color: #2A77AE;
+  /* text-decoration: underline; */
+  color: #black;
   margin-bottom: 50px;
 }
