--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -1,7 +1,7 @@
 .title {
-  width: 80%;
+  width: 100%;
   text-align: center;
-  font-size: 3rem;
+  font-size: 40px;
   margin-top: 25px;
   color: black;
   margin-bottom: 50px;
